--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4"
   },
